--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -35,9 +35,9 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-}
-ol, ul {
-	list-style: none;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-rendering: optimizeLegibility;
 }
 blockquote, q {
 	quotes: none;
@@ -58,17 +58,33 @@ Styles
 */
 
 ::selection {
+	color: white;
 	background-color: coral;
 }
 
 html {
+	font-size: 1em;
   font-family: 'Hind', 'Helvetica Neue', sans-serif;
+	letter-spacing: -0.225px;
   background-color: #111;
-  color: #fff;
+  color: white;
+}
+
+@media (min-width: 320px) {
+	html {
+		font-size: 1.25em;
+	}
+}
+
+@media (min-width: 768px) {
+	html {
+		font-size: 1.46875em;
+	}
 }
 
 body, h1, h2, h3, h4, h5, h6 {
   font-size-adjust: 0.5;
+	line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -77,16 +93,30 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 1rem;
 }
 
+h1 {
+  margin-top: 0;
+  font-size: 1.602em;
+}
+
+h2 { font-size: 1.424em; }
+
+h3 { font-size: 1.266em; }
+
+h4 { font-size: 1.125em; }
+
+small, .font_small { font-size: 0.889em; }
+
 p {
-	font-size: 1.5em;
-  line-height: 1.65em;
+	font-size: 1rem;
 	margin-bottom: 1.3em;
 }
 
 a {
+	display: inline-block;
+	line-height: 1em;
   color: #fff;
   text-decoration: none;
-  transition: all .2s ease;
+	-webkit-transition: border-bottom 400ms ease;
 }
 
 a:hover {
@@ -94,11 +124,32 @@ a:hover {
 }
 
 p > a {
-	border-bottom: solid 2px rgba(255, 255, 255, 0.2);
+	border-bottom: solid 2px rgba(255, 255, 255, 0.15);
 }
 
 p > a:hover {
-	border-bottom: solid 2px rgba(255, 255, 255, 0.15);
+	color: inherit;
+	border-bottom-color: rgba(255, 255, 255, 1);
+}
+
+/* Remove bottom border from image links */
+a[href$=jpg], a[href$=jpeg], a[href$=jpe], a[href$=png], a[href$=gif],
+a[href$=jpg]:hover, a[href$=jpeg]:hover, a[href$=jpe]:hover, a[href$=png]:hover, a[href$=gif]:hover {
+	border: none;
+}
+
+ol, ul {
+	margin: 0;
+	margin-bottom: 1.3em;
+	padding-left: 1em;
+}
+
+li > ul {
+	margin: 0 0 0 1em;
+}
+
+li > p {
+	margin: 0;
 }
 
 section {
@@ -114,117 +165,13 @@ section {
 }
 
 blockquote {
-	font-size: 0.8928em;
   background: rgba(255, 255, 255, 0.1);
   border-left: 6px solid rgba(255, 255, 255, 0.2);
   margin: 1.5em 0px;
   padding: 0.5em 10px;
   quotes: "\201C""\201D""\2018""\2019";
 }
-blockquote:before {
-  color: rgba(255, 255, 255, 0.2);
-  content: open-quote;
-  font-size: 4em;
-  line-height: 0.1em;
-  margin-right: 0.25em;
-  vertical-align: -0.4em;
-}
-blockquote:after {
-	color: rgba(255, 255, 255, 0.2);
-  content: close-quote;
-  font-size: 4em;
-  line-height: 0.1em;
-  margin-left: 0.25em;
-  vertical-align: -0.4em;
-}
 blockquote p {
   display: inline;
-}
-
-/*
-Headings
-*/
-
-h1 {
-  font-size: 2em;
-  /* 2x body copy size = 32px */
-  line-height: 1.25;
-  /* 45px / 36px */
-}
-
-@media (min-width: 43.75em) {
-  h1 {
-    font-size: 2.5em;
-    /* 2.5x body copy size = 40px */
-    line-height: 1.125;
-  }
-}
-
-@media (min-width: 56.25em) {
-  h1 {
-    font-size: 3em;
-    /* 3x body copy size = 48px */
-    line-height: 1.05;
-    /* keep to a multiple of the 20px line height
-    and something more appropriate for display headings */
-  }
-}
-
-h2 {
-  font-size: 1.625em;
-  /* 1.625x body copy size = 26px */
-  line-height: 1.15384615;
-  /* 30px / 26px */
-}
-
-@media (min-width: 43.75em) {
-  h2 {
-    font-size: 2em;
-    /* 2x body copy size = 32px */
-    line-height: 1.25;
-  }
-}
-
-@media (min-width: 56.25em) {
-  h2 {
-    font-size: 2.25em;
-    /* 2.25x body copy size = 36px */
-    line-height: 1.25;
-  }
-}
-
-h3 {
-  font-size: 1.375em;
-  /* 1.375x body copy size = 22px */
-  line-height: 1.13636364;
-  /* 25px / 22px */
-}
-
-@media (min-width: 43.75em) {
-  h3 {
-    font-size: 1.5em;
-    /* 1.5x body copy size = 24px */
-    line-height: 1.25;
-  }
-}
-
-@media (min-width: 56.25em) {
-  h3 {
-    font-size: 1.75em;
-    /* 1.75x body copy size = 28px */
-    line-height: 1.25;
-  }
-}
-
-h4 {
-  font-size: 1.125em;
-  /* 1.125x body copy size = 18px */
-  line-height: 1.11111111;
-}
-
-@media (min-width: 43.75em) {
-  h4 {
-    line-height: 1.22222222;
-    /* (22px / 18px */
-  }
+	font-size: 0.9em;
 }
